# noterino-lambda

./: Cargo.toml  Makefile  README.md  commands.sh  env.json  samconfig.toml  template.yml  test_template.yml
.github/workflows/: build.yml
src/: main.rs  router.rs
src/config/: mod.rs
src/controllers/: document_controller.rs  mod.rs
src/repositories/: document_repository.rs  mod.rs
src/services/: documentService.rs  document_service.rs  mod.rs  notes_service.rs
templates/: api_gateway.yml  mock_data.yml  start_test_db.sh  template_local.yml
