[package]
name = "noterino_lambda"
version = "0.1.0"
edition = "2021"
authors = ["thomas.andolf@gmail.com@gmail.com"]
license = "MIT"
autobins = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.51.0"
aws-sdk-dynamodb = "0.21.0"
lambda_runtime = "0.7.1"
lambda_http = { version = "0.7", default-features = false, features = ["apigw_rest"] }
nanoserde = "0.1.32"
tokio = { version = "1.22.0", features = ["macros"] }
tokio-stream = "0.1"
tracing = { version = "0.1", features = ["log"] }
tracing-subscriber = { version = "0.3", default-features = false, features = ["fmt"] }
structopt = "0.3.26"
multimap = "0.8.3"
matchit = "0.7.0"

[[bin]]
name = "bootstrap"
path = "src/main.rs"
